0029917: Foundation Classes - OSD_FileNode AccessMoment and CreationMoment return the same date on Windows

fAccess in CreationMoment() function for Windows has been modified from TRUE to FALSE